# incentive-fuzzer

./: .gitignore  README.md  foundry.toml  pyproject.toml
comparison/echidna/: BeanstalkGovEchidna.sol  RESULTS.md  echidna.yaml  run_echidna.sh
docs/: live-protocol-candidates.md
fuzzer/core/: role.py  simulator.py  spec.py  (+2 more)
scripts/: benchmark.py  convert_to_automode.py  enable_flash_loan.py  mainnet_sweep.py  sanity_lending.py
specs/: audit_aave_emode.yaml  audit_beefy.yaml  audit_compoundv3.yaml  audit_maker_psm.yaml  audit_notional.yaml  audit_pendle.yaml  audit_sfrax.yaml  audit_silo.yaml  audit_susde_mainnet.yaml  audit_traderjoe.yaml  audit_yearn_v3.yaml  audit_yvdai_mainnet.yaml  auto_audit_aave_emode.yaml  auto_audit_compoundv3.yaml  auto_audit_maker_psm.yaml  auto_audit_pendle.yaml  auto_audit_sfrax.yaml  auto_audit_silo.yaml  auto_audit_traderjoe.yaml  auto_beanstalk_gov.yaml  auto_beefy.yaml  auto_inverse.yaml  auto_multiagent_shared_treasury.yaml  auto_oneday_alphahomora.yaml  auto_oneday_bond_self.yaml  auto_oneday_bzx_margin.yaml  auto_oneday_cheesebank.yaml  auto_oneday_compound_flashgov.yaml  auto_oneday_convex_bribe.yaml  auto_oneday_cream_yvault.yaml  auto_oneday_dydx.yaml  auto_oneday_gmx.yaml  auto_oneday_harvest.yaml  auto_oneday_indexed.yaml  auto_oneday_iron.yaml  auto_oneday_jit.yaml  auto_oneday_mph.yaml  auto_oneday_olympus.yaml  auto_oneday_saddle.yaml  auto_oneday_xsnxa.yaml  (+84 more)
tests/: test_tier1_findings.py  test_tier2_findings.py  test_tier3_findings.py  test_tier_a_canonical.py  test_tier_b_canonical.py  test_tier_c_mainnet.py
(+78 files in other folders)
